# tokenflow

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml
backend/: Dockerfile  README.md  __init__.py  main.py  requirements.txt  shared.py  test_model_selection.py
backend/api/endpoints/: classification.py  compression.py  generate.py  model_selection.py
backend/core/: dependencies.py
backend/models/: rankings.py  schemas.py
backend/services/: model_service.py
backend/utils/: auth.py
backend_go/: .gitignore  README.md  go.mod  go.sum
backend_go/cmd/server/: main.go  main_test.go
backend_go/cmd/test/: main.go
backend_go/pkg/config/: config.go
backend_go/pkg/handlers/: classification_handler.go  compression_handler.go  model_handler.go
backend_go/pkg/models/: models.go
backend_go/pkg/routes/: routes.go
backend_go/pkg/services/: classification_service.go  compression_service.go  model_service.go
backend_python/: README.md  pyproject.toml  run.py  test_service.py
backend_python/src/tokenflow_python/: __init__.py  main.py
frontend/: .prettierignore  diff.txt  eslint.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/clients/: supabaseClient.ts
frontend/components/: Auth.tsx  AuthSession.tsx  Dashboard.tsx  ModelCategoryRankings.tsx  ModelSelectionChatView.tsx  PromptCompressionView.tsx
frontend/contexts/: AuthContext.tsx
frontend/utils/: theme.ts
