[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenflow-python"
version = "0.1.0"
description = "Python backend for TokenFlow with ML-powered classification and compression"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = "MIT"
authors = [
    { name = "Shaunak", email = "shaunak@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "transformers==4.37.2",
    "llmlingua",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "accelerate==0.27.2",
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tokenflow_python"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "UP", "PL", "TRY"]
ignore = []

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
